--- a/pom.xml
+++ b/pom.xml
@@ -29,6 +29,13 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>LATEST</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-core</artifactId>
+			<version>2.8.9</version>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 </project>
