--- a/modules/core/pom.xml
+++ b/modules/core/pom.xml
@@ -40,5 +40,6 @@
 		<groupId>net.kikkirej.taskreminder</groupId>
 		<artifactId>TaskReminder</artifactId>
 		<version>0.0.1-SNAPSHOT</version>
+		<relativePath>../..</relativePath>
 	</parent>
 </project>
