--- a/solutions/deployment/directory/conf/config.properties
+++ b/solutions/deployment/directory/conf/config.properties
@@ -5,7 +5,12 @@ datecolum=C
 namecells=5D:5G
 
 ### Mapping ###
+#File with mapping entries
 pathtomappingdocument=../conf/mapping.txt
+
+### Important Tasks ###
+#These tasks should notify
+importanttasks=Aufgabe1;Aufgabe2
 
 #### MailAddresses ####
 #address of the administrator
