--- a/solutions/deployment/directory/conf/config.properties
+++ b/solutions/deployment/directory/conf/config.properties
@@ -1,8 +1,11 @@
 ### Excel-Orientation ###
 pathtoexceldocument=..\files\example\example.xlsx
-sheetname=Tabelle
-datecolum=C
-namecells=5D:5G
+sheetname=Table
+#Every Index count begins with 1
+dateColumnIndex=1
+nameRowIndex=1
+nameColumnBeginIndex=2
+nameColumnEndIndex=5
 
 ### Mapping ###
 #File with mapping entries
@@ -10,7 +13,7 @@ pathtomappingdocument=../conf/mapping.txt
 
 ### Important Tasks ###
 #These tasks should notify
-importanttasks=Aufgabe1;Aufgabe2
+importanttasks=Tasktype1;Tasktype2
 
 #### MailAddresses ####
 #address of the administrator
