--- a/solutions/deployment/directory/conf/config.properties
+++ b/solutions/deployment/directory/conf/config.properties
@@ -1,40 +1,40 @@
 ### Excel-Orientation ###
 pathtoexceldocument=..\files\example\example.xlsx
 sheetname=Table
-#Every Index count begins with 1
+# Every Index count begins with 1
 dateColumnIndex=1
 nameRowIndex=1
 nameColumnBeginIndex=2
 nameColumnEndIndex=5
 
 ### Mapping ###
-#File with mapping entries
+# File with mapping entries
 pathtomappingdocument=../conf/mapping.txt
 
 ### Important Tasks ###
-#These tasks should notify
+# These tasks should notify
 importanttasks=Tasktype1;Tasktype2
 
-#### MailAddresses ####
-#address of the administrator
+### Mailaddresses ###
+# address of the administrator
 adminmail=info@kikkirej.net;greeny@jinou.de
-#address of the users, which should receive the 
+# address of the users, which should receive the 
 ccmail=info@kikkirej.net;greeny@jinou.de
 
-### MailServer ###
+### Mailserver ###
 mailhost=server
 mailport=25
 mailfrom=mail@mail
 
 ### MailTemplates ###
-#Alertmail for the case of an unreachable computer
+# Alertmail for the case of an unreachable computer
 mailsubjectalert=Achtung: {TASK}
 mailtextalertpath=../files/templates/mail/alertMail.txt
 
-#Remindermail just as a reminder
+# Remindermail just as a reminder
 mailsubjectreminder=Erinnerung: {TASK}
 mailtextreminderpath=../files/templates/mail/reminderMail.txt
 
-#New User-Mail - This mail is for the case of a new user.
+# New Usermail - This mail is for the case of a new user.
 mailsubjectunknownuser=Neuer Nutzer: {USER} ({TASK})
 mailtextunknownuserpath=../files/templates/mail/newUserMail.txt
